Reply box logo alignment fixed

--- a/css/offers.css
+++ b/css/offers.css
@@ -5,11 +5,13 @@
 .btn-accept {
     background-color: #00aeed;
     color: white;
+    font-size: 13px;
+    padding: 3px 7px;
 }
 
 @media (max-width: 980px) {
     .btn-accept {
-        font-size: 13px;
+        font-size: 12px;
         padding: 3px 5px;
     }
 }
@@ -34,7 +36,7 @@
 }
 
 .reply-box-image {
-    display: inline-block;
+    float: left;
     height: 20px;
     width: 20px;
 }
@@ -58,8 +60,9 @@
 }
 
 .reply-message {
-    padding-left: 5px;
     font-size: 0.92em;
+    display: block;
+    margin-left: 30px;
 }
 
 .btn-compose {
